# DDS

./: ReleaseNotes.md
.github/workflows/: master.yaml
MiscCommon/: INet.h
dds-agent/src/: AgentConnectionManager.cpp  CommanderChannel.cpp  CommanderChannel.h  Options.h  UIChannel.cpp  UIConnectionManager.cpp  main.cpp
dds-commander/: CMakeLists.txt
dds-commander/src/: AgentChannel.cpp  AgentChannel.h  ConnectionManager.cpp  ConnectionManager.h  MasterAgent.cpp  MasterAgent.h
dds-intercom-lib/tests/: CMakeLists.txt
dds-intercom-lib/tests/dds_intercom-test-multiple-instances/: CMakeLists.txt  dds_intercom-test-multiple-instances-cc.cpp  dds_intercom-test-multiple-instances-kv.cpp  main.cpp
dds-protocol-lib/: CMakeLists.txt
dds-protocol-lib/src/: AgentsInfoCmd.cpp  AssignUserTaskCmd.cpp  BasicCmd.h  BinaryAttachmentCmd.cpp  BinaryAttachmentReceivedCmd.cpp  BinaryAttachmentStartCmd.cpp  ClientChannelImpl.h  CommandAttachmentImpl.h  CustomCmdCmd.cpp  DeleteKeyCmd.cpp  GetPropValuesCmd.cpp  HostInfoCmd.cpp  ProgressCmd.cpp  ProtocolCommands.h  ProtocolMessage.h  SetTopologyCmd.cpp  SimpleMsgCmd.cpp  SubmitCmd.cpp  UUIDCmd.cpp  Uint32Cmd.cpp  Uint32Cmd.h  UpdateKeyCmd.cpp  UserTaskDoneCmd.cpp  VersionCmd.cpp
dds-protocol-lib/tests/: TestCmd.cpp  TestCmd.h  Test_ProtocolMessage.cpp
dds-user-defaults/src/: UserDefaults.cpp  UserDefaults.h
